@@ -1,3 +1,9 @@
+2006-05-02  Robert Jordan  <robertj@gmx.net>
+
+	* monoresgen.cs (TxtResourceReader/Writer): Support escapes
+	(\n, \r, \t, \\) in input and output. Fixes bug #78270 and
+	an internal TODO.
+
 2006-04-11  Gert Driesen  <gert.driesen@telenet.be>
 	    Raja R Harinath  <rharinath@novell.com>
 
